	Fixed: Apache access.log file are put in wrong directory (vlogger)
	Fixed: Bind9 must not be restarted each time a DNS zone is updated. A simple reload should be sufficient
	Fixed: Some errors are not trapped

DATABASE
	Added: Status field in domain_dns table ( Custom DNS record status field )

FRONTEND
	Fixed: Html in title attribute must not be auto-escaped by jQueryUI tooltip

PLUGINS
	Updated: API to version 0.2.18

INSTALLER
	Fixed: iMSCP::Requirements::_modules: Modules [Email::Simple] were not found on your system
	Fixed: Use of uninitialized value $dbPass in string ( imscp/engine/setup/imscp-setup-methods.pl line 482 )

TICKETS
	Fixed #IP-1275: Apache access logs are created in /<domain.tld>

------------------------------------------------------------------------------------------------------------------------
1.2.2
------------------------------------------------------------------------------------------------------------------------

2015-02-12: Laurent Declercq
	RELEASE i-MSCP 1.2.2

BACKEND
	Fixed: Invalid argument at /usr/share/perl5/MIME/Entity.pm line 1878 ( autoreply script )
	Fixed: Wrong sqld server name
	Fixed: Vlogger - High CPU usage

FRONTEND
	Fixed: Wrong URL in default email templates ( Missing port )
	Updated: Logo and CSS

INSTALLER
	Added: panel_ports item for the --reconfigure command line option
	Fixed: Encoding issue when running installer through SSH with PuTTY

PACKAGES
	Added: Ports dialog ( FrontEnd package )
	Fixed: Several event listeners are registered too late ( regression fix )
	Fixed: Awstats section not added in vhost files

PLUGINS
	Updated: API to version 0.2.17

TICKETS
	Fixed #IP-1259: Layout - Text goes out of statistic bar
	Fixed #IP-1263: Access to statistics ( Awstats ) is broken - 404 error
	Fixed #IP-1267: Double-quotes in the Dovecot SQL user's password must be escaped

------------------------------------------------------------------------------------------------------------------------
1.2.1