@@ -11,13 +11,12 @@ Once the update is done, you must update each plugin by downloading the last ver
 
 This version comes with a new CustomDNS module which allows to process custom DNS records without involving a rebuilt of
 files which belong to HTTP server implementations ( vhost file, php files... ). This also allows to process the custom
-DNS records more faster than before because from now they are managed by a dedicated module which is only responsible to
-add them into the DNS zone files.
+DNS records more faster than before because from now they are managed by a dedicated module.
 
 In past, each time you wanted add or delete a custom DNS record, it was mandatory to rebuilt the full configuration of
 the domain ( vhost file, php file .. ). This involved a lot of tasks done for nothing and this was not without pose any
 problems such as the useless reload of Apache ( eg. when using a plugin such as OwnDDNS which needs to update the DNS
-zone files often through a cron job ).
+zone files very often through a cron job ).
 
 From now, if you want add your own DNS records, you must simply add them into the domain_dns table with the correct
 status ( toadd, todelete... ) and trigger a backend request ( only needed if you add the record through the FrontEnd ).
